Java 1.4 fix
git-svn-id: https://svn.apache.org/repos/asf/wicket/trunk@604920 13f79535-47bb-0310-9956-ffa450edef68